# soccer-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt  soccer_mcp_server.py
.github/workflows/: deploy-to-hf-spaces.yml
prompts/: find-competition-id.j2
src/: football_client.py  llm_utils.py  server_config.py  soccer_client.py  tools.py  tools_helper.py
