[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-mcp-server"
version = "0.1.0"
description = "Soccer MCP Server"
authors = [
    {name = "Malan Evans", email = "malan.lakshan@gmail.com"},
]
requires-python = ">=3.12.0, <4.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add your dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 88

[tool.setuptools.packages.find]
where = ["src"]