[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-mcp-server"
version = "0.1.0"
description = "Soccer MCP Server"
authors = [
    {name = "Malan Evans", email = "malan.lakshan@gmail.com"},
]
requires-python = ">=3.12.0, <4.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.12.11",
    # Add your dependencies here
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
]

[tool.black]
line-length = 88

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=7.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
]
